# EE205-Lab10d-Animal-Farm-2

./: CMakeLists.txt  main.cpp
